--- a/Casanova/Casanova/TopicHeaderTableViewCell.xib
+++ b/Casanova/Casanova/TopicHeaderTableViewCell.xib
@@ -23,22 +23,22 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="258" id="KGk-i7-Jjw" customClass="TopicHeaderTableViewCell" customModule="Casanova" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="396" height="258"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="259" id="KGk-i7-Jjw" customClass="TopicHeaderTableViewCell" customModule="Casanova" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="396" height="259"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="396" height="257.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="396" height="258.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s2L-5p-bKQ">
-                        <rect key="frame" x="30" y="110.5" width="336" height="100.5"/>
+                        <rect key="frame" x="30" y="48" width="336" height="100.5"/>
                         <string key="text">Do you agree or disagree the statement that we should let children use the computers or other electronic devices as early as they can?</string>
                         <fontDescription key="fontDescription" name="Muli" family="Muli" pointSize="17"/>
                         <color key="textColor" red="0.29019607843137252" green="0.29019607843137252" blue="0.29019607843137252" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="inB-G3-hzE" customClass="TagListView" customModule="TagListView">
-                        <rect key="frame" x="30" y="10" width="336" height="90.5"/>
+                        <rect key="frame" x="30" y="10" width="336" height="28"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="color" keyPath="textColor">
                                 <color key="value" red="0.29411764705882354" green="0.80392156862745101" blue="0.92941176470588238" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -61,19 +61,19 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XgU-V7-nQX">
-                        <rect key="frame" x="70" y="221" width="29.5" height="16.5"/>
+                        <rect key="frame" x="70" y="222" width="29.5" height="16.5"/>
                         <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="# answers" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gK1-X5-gjE">
-                        <rect key="frame" x="109.5" y="221" width="54" height="16.5"/>
+                        <rect key="frame" x="109.5" y="222" width="54" height="16.5"/>
                         <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JE0-rW-mBG">
-                        <rect key="frame" x="30" y="221" width="30" height="16"/>
+                        <rect key="frame" x="30" y="222" width="30" height="16"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="16" id="Dze-lp-ujV"/>
@@ -81,43 +81,53 @@
                         </constraints>
                     </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fnf-RI-mDU">
-                        <rect key="frame" x="298" y="216.5" width="68" height="26"/>
+                        <rect key="frame" x="270" y="215.5" width="96" height="30"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="26" id="ubq-Xv-gEI"/>
-                            <constraint firstAttribute="width" constant="68" id="vwL-u1-4Mn"/>
+                            <constraint firstAttribute="height" constant="30" id="ubq-Xv-gEI"/>
+                            <constraint firstAttribute="width" constant="96" id="vwL-u1-4Mn"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="PingFangSC-Medium" family="PingFang SC" pointSize="12"/>
+                        <fontDescription key="fontDescription" name="PingFangSC-Medium" family="PingFang SC" pointSize="14"/>
                         <state key="normal" title="我要回答"/>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="中文翻译，中文翻译，中文翻译，中文翻译，中文翻译，中文翻译，中文翻译" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k3y-Ur-u6L">
+                        <rect key="frame" x="30" y="160.5" width="336" height="41"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="fnf-RI-mDU" firstAttribute="trailing" secondItem="s2L-5p-bKQ" secondAttribute="trailing" id="2Nt-HV-zj7"/>
                     <constraint firstItem="fnf-RI-mDU" firstAttribute="centerY" secondItem="gK1-X5-gjE" secondAttribute="centerY" id="2bs-NS-AYc"/>
                     <constraint firstItem="s2L-5p-bKQ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="4DS-yc-XfJ"/>
                     <constraint firstItem="s2L-5p-bKQ" firstAttribute="top" secondItem="inB-G3-hzE" secondAttribute="bottom" constant="10" id="5Wr-7B-sam"/>
-                    <constraint firstItem="JE0-rW-mBG" firstAttribute="top" secondItem="s2L-5p-bKQ" secondAttribute="bottom" constant="10" id="Cja-oc-X94"/>
                     <constraint firstItem="gK1-X5-gjE" firstAttribute="bottom" secondItem="XgU-V7-nQX" secondAttribute="bottom" id="DV6-1G-6aR"/>
                     <constraint firstItem="inB-G3-hzE" firstAttribute="leading" secondItem="s2L-5p-bKQ" secondAttribute="leading" id="IhT-gM-S8y"/>
                     <constraint firstAttribute="trailingMargin" secondItem="s2L-5p-bKQ" secondAttribute="trailing" constant="10" id="Jyk-Kx-9Ri"/>
                     <constraint firstItem="gK1-X5-gjE" firstAttribute="centerY" secondItem="XgU-V7-nQX" secondAttribute="centerY" id="Nan-1T-IvF"/>
+                    <constraint firstItem="k3y-Ur-u6L" firstAttribute="leading" secondItem="s2L-5p-bKQ" secondAttribute="leading" id="Pct-pa-UMi"/>
+                    <constraint firstItem="k3y-Ur-u6L" firstAttribute="top" secondItem="s2L-5p-bKQ" secondAttribute="bottom" constant="12" id="V7g-bK-VIk"/>
                     <constraint firstItem="XgU-V7-nQX" firstAttribute="leading" secondItem="JE0-rW-mBG" secondAttribute="trailing" constant="10" id="Wpw-Wg-mr5"/>
                     <constraint firstAttribute="bottomMargin" secondItem="JE0-rW-mBG" secondAttribute="bottom" constant="10" id="cW5-Gk-4hI"/>
                     <constraint firstItem="inB-G3-hzE" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="ghv-fg-IXD"/>
                     <constraint firstItem="JE0-rW-mBG" firstAttribute="centerY" secondItem="XgU-V7-nQX" secondAttribute="centerY" id="puR-Sj-DPa"/>
                     <constraint firstItem="inB-G3-hzE" firstAttribute="trailing" secondItem="s2L-5p-bKQ" secondAttribute="trailing" id="r2g-jn-yyS"/>
                     <constraint firstItem="gK1-X5-gjE" firstAttribute="leading" secondItem="XgU-V7-nQX" secondAttribute="trailing" constant="10" id="rAa-HZ-G5t"/>
+                    <constraint firstItem="fnf-RI-mDU" firstAttribute="top" secondItem="k3y-Ur-u6L" secondAttribute="bottom" constant="14" id="t0T-bx-lMc"/>
                     <constraint firstItem="JE0-rW-mBG" firstAttribute="leading" secondItem="s2L-5p-bKQ" secondAttribute="leading" id="wZj-fe-GHF"/>
+                    <constraint firstItem="k3y-Ur-u6L" firstAttribute="trailing" secondItem="s2L-5p-bKQ" secondAttribute="trailing" id="zLg-8J-NwT"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="answerButton" destination="fnf-RI-mDU" id="iCL-9v-mSR"/>
+                <outlet property="chineseTitleLabel" destination="k3y-Ur-u6L" id="AZ7-kE-BDs"/>
                 <outlet property="difficultyLabel" destination="XgU-V7-nQX" id="JE9-wQ-xZ5"/>
                 <outlet property="difficultyView" destination="JE0-rW-mBG" id="skY-Mh-tCO"/>
                 <outlet property="numOfAnswersLabel" destination="gK1-X5-gjE" id="0dp-fT-tqG"/>
                 <outlet property="tagListView" destination="inB-G3-hzE" id="UKE-eU-Iab"/>
                 <outlet property="titleLabel" destination="s2L-5p-bKQ" id="v0H-wm-PZw"/>
             </connections>
-            <point key="canvasLocation" x="-88" y="-118"/>
+            <point key="canvasLocation" x="-88" y="-117.5"/>
         </tableViewCell>
     </objects>
 </document>
