--- a/Casanova/Casanova/TopicHeaderView.xib
+++ b/Casanova/Casanova/TopicHeaderView.xib
@@ -19,6 +19,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TopicHeaderView" customModule="Casanova" customModuleProvider="target">
             <connections>
+                <outlet property="chineseTitleLabel" destination="Bgg-J8-tue" id="xze-Xk-IE4"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="DCa-W0-uRl"/>
                 <outlet property="difficultyLabel" destination="0mK-r5-Koo" id="slh-uu-MaG"/>
                 <outlet property="difficultyView" destination="uPE-n9-04y" id="2i2-Dh-9iE"/>
@@ -29,18 +30,44 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="488" height="201"/>
+            <rect key="frame" x="0.0" y="0.0" width="488" height="240"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RnQ-BR-wm8">
-                    <rect key="frame" x="24" y="7" width="440" height="64.5"/>
+                    <rect key="frame" x="24" y="86.5" width="440" height="64.5"/>
                     <string key="text">Do you agree or disagree the statement that we should let children use the computers or other electronic devices as early as they can?</string>
                     <fontDescription key="fontDescription" name="Merriweather-Regular" family="Merriweather" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mK-r5-Koo">
+                    <rect key="frame" x="64" y="214" width="29.5" height="16.5"/>
+                    <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="12"/>
+                    <color key="textColor" red="0.29019607843137252" green="0.29019607843137252" blue="0.29019607843137252" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="# answers" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vbj-wv-L3x">
+                    <rect key="frame" x="103" y="214" width="54" height="16.5"/>
+                    <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="12"/>
+                    <color key="textColor" red="0.29019607843137252" green="0.29019607843137252" blue="0.29019607843137252" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uPE-n9-04y">
+                    <rect key="frame" x="24" y="214" width="30" height="16"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="30" id="kBD-7R-0mp"/>
+                        <constraint firstAttribute="height" constant="16" id="tJX-Gl-5QE"/>
+                    </constraints>
+                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="中文翻译，中文翻译，中文翻译，中文翻译，中文翻译，中文翻译，中文翻译" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bgg-J8-tue">
+                    <rect key="frame" x="24" y="163" width="440" height="41"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ggY-Pv-14P" customClass="TagListView" customModule="TagListView">
-                    <rect key="frame" x="24" y="77" width="440" height="88.5"/>
+                    <rect key="frame" x="24" y="10" width="440" height="66.5"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="color" keyPath="textColor">
                             <color key="value" red="0.29411764709999999" green="0.80392156859999997" blue="0.92941176469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -71,46 +98,29 @@
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mK-r5-Koo">
-                    <rect key="frame" x="64" y="175" width="29.5" height="16.5"/>
-                    <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="12"/>
-                    <color key="textColor" red="0.29019607843137252" green="0.29019607843137252" blue="0.29019607843137252" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="# answers" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vbj-wv-L3x">
-                    <rect key="frame" x="103" y="175" width="54" height="16.5"/>
-                    <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="12"/>
-                    <color key="textColor" red="0.29019607843137252" green="0.29019607843137252" blue="0.29019607843137252" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uPE-n9-04y">
-                    <rect key="frame" x="24" y="175" width="30" height="16"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="30" id="kBD-7R-0mp"/>
-                        <constraint firstAttribute="height" constant="16" id="tJX-Gl-5QE"/>
-                    </constraints>
-                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="uPE-n9-04y" firstAttribute="top" secondItem="ggY-Pv-14P" secondAttribute="bottom" constant="10" id="0xj-iF-tFR"/>
+                <constraint firstItem="Bgg-J8-tue" firstAttribute="leading" secondItem="RnQ-BR-wm8" secondAttribute="leading" id="3g1-Cw-nUq"/>
                 <constraint firstItem="ggY-Pv-14P" firstAttribute="trailing" secondItem="RnQ-BR-wm8" secondAttribute="trailing" id="5cJ-S4-sco"/>
                 <constraint firstItem="ggY-Pv-14P" firstAttribute="leading" secondItem="RnQ-BR-wm8" secondAttribute="leading" id="7Xd-o4-kEY"/>
+                <constraint firstItem="ggY-Pv-14P" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="NnW-Dj-gsB"/>
                 <constraint firstItem="vbj-wv-L3x" firstAttribute="leading" secondItem="0mK-r5-Koo" secondAttribute="trailing" constant="10" id="PJX-7n-MCm"/>
                 <constraint firstItem="0mK-r5-Koo" firstAttribute="leading" secondItem="uPE-n9-04y" secondAttribute="trailing" constant="10" id="TRl-Bh-OS2"/>
                 <constraint firstAttribute="bottom" secondItem="uPE-n9-04y" secondAttribute="bottom" constant="10" id="UcD-4A-Nlg"/>
                 <constraint firstItem="vbj-wv-L3x" firstAttribute="bottom" secondItem="0mK-r5-Koo" secondAttribute="bottom" id="X8c-Da-peD"/>
                 <constraint firstItem="RnQ-BR-wm8" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="24" id="adg-9Q-Btb"/>
                 <constraint firstItem="vbj-wv-L3x" firstAttribute="centerY" secondItem="0mK-r5-Koo" secondAttribute="centerY" id="b5N-Vn-pAM"/>
-                <constraint firstItem="RnQ-BR-wm8" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="7" id="h1P-TM-vzd"/>
-                <constraint firstItem="ggY-Pv-14P" firstAttribute="top" secondItem="RnQ-BR-wm8" secondAttribute="bottom" constant="5.7000000000000002" id="ifp-AY-7tt"/>
+                <constraint firstItem="Bgg-J8-tue" firstAttribute="top" secondItem="RnQ-BR-wm8" secondAttribute="bottom" constant="12" id="i0G-kK-ykr"/>
+                <constraint firstItem="uPE-n9-04y" firstAttribute="top" secondItem="Bgg-J8-tue" secondAttribute="bottom" constant="10" id="nRF-jb-bkl"/>
+                <constraint firstItem="Bgg-J8-tue" firstAttribute="trailing" secondItem="RnQ-BR-wm8" secondAttribute="trailing" id="o9A-mx-ybk"/>
                 <constraint firstItem="uPE-n9-04y" firstAttribute="centerY" secondItem="0mK-r5-Koo" secondAttribute="centerY" id="psM-vx-Hc0"/>
                 <constraint firstAttribute="trailing" secondItem="RnQ-BR-wm8" secondAttribute="trailing" constant="24" id="v6h-wu-ehx"/>
+                <constraint firstItem="RnQ-BR-wm8" firstAttribute="top" secondItem="ggY-Pv-14P" secondAttribute="bottom" constant="10" id="vX8-sH-jJ4"/>
                 <constraint firstItem="uPE-n9-04y" firstAttribute="leading" secondItem="RnQ-BR-wm8" secondAttribute="leading" id="wz2-BZ-jzB"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="21" y="17.5"/>
+            <point key="canvasLocation" x="-71" y="-15"/>
         </view>
     </objects>
 </document>
